# dynamicweather

./: Cargo.toml  README.md  main.rs
src/: config.json  main.rs  weather.rs
