[package]
name = "dynamicweather"
authors = ["Oetzi_CS"]
repository = "https://github.com/OetziCS/dynamicweather/"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
reqwest = "0.11"
actix-web = "4.0"
env_logger = "0.10.1"
serde_json = "1.0"
toml = "0.8.3"
actix-rt = "2.5"
once_cell = "1.8"
